Updated pb to modify output

--- a/pb_evaluate_stig-1.2401.x.yml
+++ b/pb_evaluate_stig-1.2401.x.yml
@@ -6,21 +6,14 @@
   become: yes
   tasks:
 
-    - name: Install powershell lshw
-      ansible.builtin.yum:
-        name: "{{ item }}"
-      loop:
-        - "lshw"
-        - "net-tools"
-        - "powershell"
-        - "unzip"
+    - name: Install powershell 
+      yum:
+        name: powershell
+        state: present
       tags:
         - "package"
-        - "lshw"
-        - "net-tools"
         - "powershell"
-        - "unzip"
-
+        
     - name: Copy the files
       ansible.builtin.copy:
         src: Evaluate-STIG
