updated Site Stig handlers, tasks and created apache server stig

--- a/Playbooks/roles/Apache_24_Site_STIG/handlers/main.yml
+++ b/Playbooks/roles/Apache_24_Site_STIG/handlers/main.yml
@@ -1,6 +1,11 @@
 ---
 - name: restart_apache
   service:
-    name: apachectl
+    name: httpd
+    state: restarted
+
+- name: restart_ssh
+  service:
+    name: sshd
     state: restarted
 ...
